--- a/core/Makefile
+++ b/core/Makefile
@@ -415,7 +415,7 @@ endif
 	$(hide) TARGET_BUILD_TYPE="$(TARGET_BUILD_VARIANT)" \
 	        TARGET_BUILD_FLAVOR="$(TARGET_BUILD_FLAVOR)" \
 	        TARGET_DEVICE="$(TARGET_DEVICE)" \
-	        GZOSP_DEVICE="$(TARGET_DEVICE)" \
+	        NARVIS_DEVICE="$(TARGET_DEVICE)" \
 	        PRODUCT_NAME="$(TARGET_PRODUCT)" \
 	        PRODUCT_BRAND="$(PRODUCT_BRAND)" \
 	        PRODUCT_DEFAULT_LOCALE="$(call get-default-product-locale,$(PRODUCT_LOCALES))" \
@@ -4430,25 +4430,27 @@ $(INTERNAL_OTA_PACKAGE_TARGET): $(BUILT_TARGET_FILES_PACKAGE) \
 	@echo "Package OTA: $@"
 	$(call build-ota-package-target,$@,-k $(KEY_CERT_PAIR) --output_metadata_path $(INTERNAL_OTA_METADATA))
 
-GZOSP_TARGET_PACKAGE := $(PRODUCT_OUT)/$(GZOSP_VERSION).zip
+NARVIS_TARGET_PACKAGE := $(PRODUCT_OUT)/$(NARVIS_VERSION).zip
 
-.PHONY: otapackage gzosp
+.PHONY: otapackage narvis
 otapackage: $(INTERNAL_OTA_PACKAGE_TARGET)
-gzosp: otapackage
-	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(GZOSP_TARGET_PACKAGE)
-	$(hide) $(MD5SUM) $(GZOSP_TARGET_PACKAGE) > $(GZOSP_TARGET_PACKAGE).md5sum
+narvis: otapackage
+	$(hide) ln -f $(INTERNAL_OTA_PACKAGE_TARGET) $(NARVIS_TARGET_PACKAGE)
+	$(hide) $(MD5SUM) $(NARVIS_TARGET_PACKAGE) > $(NARVIS_TARGET_PACKAGE).md5sum
 	@echo -e ${CL_RED}""${CL_RED}
-	@echo -e ${CL_RED}"    ▄██████▄   ▄███████▄   ▄██████▄     ▄████████    ▄███████▄ "${CL_RED}
-	@echo -e ${CL_RED}"   ███    ███ ██▀     ▄██ ███    ███   ███    ███   ███    ███ "${CL_RED}
-	@echo -e ${CL_RED}"   ███    █▀        ▄███▀ ███    ███   ███    █▀    ███    ███ "${CL_RED}
-	@echo -e ${CL_RED}"  ▄███         ▀█▀▄███▀▄▄ ███    ███   ███          ███    ███ "${CL_RED}
-	@echo -e ${CL_RED}" ▀▀███ ████▄    ▄███▀   ▀ ███    ███ ▀███████████ ▀█████████▀ "${CL_RED}
-	@echo -e ${CL_RED}"   ███    ███ ▄███▀       ███    ███          ███   ███ "${CL_RED}
-	@echo -e ${CL_RED}"   ███    ███ ███▄     ▄█ ███    ███    ▄█    ███   ███ "${CL_RED}
-	@echo -e ${CL_RED}"   ████████▀   ▀████████▀  ▀██████▀   ▄████████▀   ▄████▀ "${CL_RED}
-	@echo -e ${CL_RED}"                           A Ground Zero Roms "${CL_RED}
-	@echo -e ${CL_RED}"                                Project      "${CL_RED}
-	@echo -e "Package complete: $(GZOSP_TARGET_PACKAGE)"
+	@echo -e ${CL_RED}"░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░░░░░░░▄▀░░░░▄▀▄▀▄▀▄▀▄▀░░░░▄▀▄▀▄▀▄▀▄▀▄▀░░░░░▄▀░░░░░░▄▀░░░░▄▀▄▀▄▀░░░░▄▀▄▀▄▀▄▀▄▀░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀▄▀▄▀▄▀░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░░░▄▀░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░░░░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░▄▀░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░░░▄▀░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░░░░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░▄▀░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░░░▄▀░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░░░░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░▄▀░░░░▄▀░░░░▄▀▄▀▄▀▄▀▄▀░░░░▄▀▄▀▄▀▄▀▄▀▄▀░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░▄▀▄▀▄▀▄▀▄▀░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░▄▀░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░░░░▄▀░░░░░░▄▀░░░░░░▄▀░░░░░░░░░░░░░░▄▀░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░▄▀░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░░░░▄▀▄▀░░▄▀▄▀░░░░░░▄▀░░░░░░░░░░░░░░▄▀░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░▄▀▄▀▄▀▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░░░░░░▄▀▄▀▄▀░░░░░░░░▄▀░░░░░░░░░░░░░░▄▀░░"${CL_RED}
+	@echo -e ${CL_RED}"░░▄▀░░░░░░░░░░▄▀░░░░▄▀░░░░░░▄▀░░░░▄▀░░░░░░▄▀▄▀▄▀░░░░░░░▄▀░░░░░░░░▄▀▄▀▄▀░░░░▄▀▄▀▄▀▄▀▄▀░░"${CL_RED}
+	@echo -e ${CL_RED}"░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░░"${CL_RED}
+
+	@echo -e "Package complete: $(NARVIS_TARGET_PACKAGE)"
 
 ifeq ($(BOARD_BUILD_RETROFIT_DYNAMIC_PARTITIONS_OTA_PACKAGE),true)
 name := $(TARGET_PRODUCT)
